# ontosurge-nexus

./: .gitignore  Dockerfile  README.md  architecture-diagram.md  character_creator.py  character_renderer.py  cloudrun_logs.txt  cloudrun_logs_2.txt  environment_renderer.py  image_agent.py  instructions.md  main.py  part1-instructions.md  part2-instuctions.md  project-story.md  pyproject.toml  requirements.txt  space_around.py
.github/workflows/: deploy.yml
static/: app.js  index.html  style.css
